# rayleigh-gan-scattering

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_app.py
Notebooks/: 01_introduction.ipynb  02_form_factors.ipynb  03_polymer_models.ipynb  04_reproducible_figures.ipynb  Rayleigh–Gans_example.ipynb  _bootstrap.py
src/: form_factors.py
src/rayleigh_gans/: __main__.py  main.py
src/rayleigh_gans/app/: qt_viewer.py
tests/: test_form_factors.py
